# Simple-Fastapi-Oauth2

./: database.json  db.py  main.py  pyproject.toml
